# MCP-Unstructured-API-Hackathon

./: .gitignore  README.md  pyproject.toml  requirements.txt
connectors/: __init__.py  utils.py
connectors/destination/: __init__.py  mongo.py
connectors/source/: __init__.py  gdrive.py
uns_mcp/: resource.py  server.py
