[project]
name = "mcp-uns-api-hackathon"
version = "0.1.1"
description = "Project built to power claude.ai using unstructured api and mcp"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "mcp[cli]>=1.3.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "notebook>=7.3.3",
    "python-dotenv>=1.0.1",
    "unstructured-client>=0.31.3",
    "pymongo>=4.11.3",
    "pip",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["connectors", "minimal_client"]  # Explicitly list your packages

[project.optional-dependencies]
dev=[
    "pre-commit"
]
